Added optional clang-tidy checker

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,10 +4,6 @@ PROJECT(ICEWM CXX)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED on)
-# TODO: drop this warning around xmas 2020 and raise cmake_minimum_required instead; Debian Jessie EOLs around 2020-06
-if(${CMAKE_VERSION} VERSION_LESS "3.1")
-    message(WARNING "!! Ancient cmake version detected, please pass flags for C++11 enabling manually through CXXFLAGS environment variable or override CMAKE_CXX_FLAGS")
-endif()
 
 INCLUDE(CheckIncludeFiles)
 INCLUDE(CheckLibraryExists)
@@ -18,6 +14,10 @@ INCLUDE(CheckIncludeFileCXX)
 INCLUDE(FindPkgConfig)
 INCLUDE(CheckCXXSourceCompiles)
 INCLUDE(CheckCXXCompilerFlag)
+
+if(${CMAKE_VERSION} VERSION_GREATER "3.6" AND NOT ${USE_CLANG_TIDY} STREQUAL "")
+    set(CMAKE_CXX_CLANG_TIDY "${USE_CLANG_TIDY}")
+endif()
 
 SET(CXXFLAGS_COMMON -pthread -Wall -Wextra -Wno-unused-parameter -Wno-missing-field-initializers -D_FILE_OFFSET_BITS=64 -D_GNU_SOURCE -DHAVE_CONFIG_H -include "${CMAKE_BINARY_DIR}/config.h" ${ICEWM_CXX_USER_FLAGS})
 include_directories(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
