--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -126,6 +126,7 @@ libice_la_SOURCES = \
 	yimage2.cc \
 	yimage_gdk.cc \
 	ykey.h \
+	ylayout.h \
 	ylib.h \
 	ylist.h \
 	ylocale.cc \
@@ -215,6 +216,7 @@ libitk_la_SOURCES = \
 	ykey.h \
 	ylabel.cc \
 	ylabel.h \
+	ylayout.h \
 	ylib.h \
 	ylist.h \
 	ylistbox.cc \
