--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -431,7 +431,7 @@ SET(ICEWM_SRCS
     wmcontainer.cc wmclient.cc wmmgr.cc wmapp.cc
     wmframe.cc wmbutton.cc wmminiicon.cc wmtitle.cc
     movesize.cc themes.cc decorate.cc browse.cc
-    wmmenu.cc wmprog.cc atasks.cc aworkspaces.cc
+    wmmenu.cc wmprog.cc wmpref.cc atasks.cc aworkspaces.cc
     amailbox.cc aclock.cc acpustatus.cc amemstatus.cc
     applet.cc apppstatus.cc aaddressbar.cc objbar.cc
     akeyboard.cc aapm.cc atray.cc ysmapp.cc yxtray.cc
