Move ObjectButton to its own source file. Rename yinput.cc to yinputline.cc.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -418,7 +418,7 @@ add_library(ice STATIC ${ICE_COMMON_SRCS})
 target_compile_options(ice PUBLIC ${icewm_pc_flags})
 
 SET(ITK_SRCS ymenu.cc ylabel.cc yscrollview.cc ymenuitem.cc
-             yscrollbar.cc ybutton.cc ylistbox.cc yinput.cc
+             yscrollbar.cc ybutton.cc ylistbox.cc yinputline.cc
              globit.cc yicon.cc wmconfig.cc wpixres.cc)
 
 add_library(itk STATIC ${ITK_SRCS})
@@ -433,7 +433,7 @@ SET(ICEWM_SRCS
     movesize.cc themes.cc decorate.cc browse.cc
     wmmenu.cc wmprog.cc wmpref.cc atasks.cc aworkspaces.cc
     amailbox.cc aclock.cc acpustatus.cc amemstatus.cc
-    applet.cc apppstatus.cc aaddressbar.cc objbar.cc
+    applet.cc apppstatus.cc aaddressbar.cc objbar.cc objbutton.cc
     akeyboard.cc aapm.cc atray.cc ysmapp.cc yxtray.cc
     )
 
