Add new icewm option --rewrite-preferences to update preferences.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -419,7 +419,7 @@ target_compile_options(ice PUBLIC ${icewm_pc_flags})
 
 SET(ITK_SRCS ymenu.cc ylabel.cc yscrollview.cc ymenuitem.cc
              yscrollbar.cc ybutton.cc ylistbox.cc yinputline.cc
-             globit.cc yicon.cc wmconfig.cc wpixres.cc)
+             globit.cc yicon.cc wmconfig.cc wmsave.cc wpixres.cc)
 
 add_library(itk STATIC ${ITK_SRCS})
 target_compile_options(itk PUBLIC ${icewm_pc_flags})
