--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -2,8 +2,10 @@ src/aaddressbar.cc
 src/aapm.cc
 src/aclock.cc
 src/acpustatus.cc
+src/akeyboard.cc
 src/amailbox.cc
 src/amemstatus.cc
+src/applet.cc
 src/apppstatus.cc
 src/atasks.cc
 src/atray.cc
@@ -27,11 +29,13 @@ src/icetray.cc
 src/iceview.cc
 src/icewmbg.cc
 src/icewmhint.cc
+src/logevent.cc
 src/misc.cc
 src/movesize.cc
 src/mstring.cc
 src/objbar.cc
 src/objbutton.cc
+src/objmenu.cc
 src/ref.cc
 src/strtest.cc
 src/testarray.cc
@@ -39,6 +43,8 @@ src/testlocale.cc
 src/testmap.cc
 src/testmenus.cc
 src/testnetwmhints.cc
+src/testpointer.cc
+src/testsizes.cc
 src/testwinhints.cc
 src/themes.cc
 src/udir.cc
@@ -50,11 +56,15 @@ src/wmclient.cc
 src/wmconfig.cc
 src/wmcontainer.cc
 src/wmdialog.cc
+src/wmdock.cc
 src/wmframe.cc
+src/wmmenu.cc
 src/wmmgr.cc
 src/wmminiicon.cc
 src/wmoption.cc
+src/wmpref.cc
 src/wmprog.cc
+src/wmsave.cc
 src/wmsession.cc
 src/wmstatus.cc
 src/wmswitch.cc
@@ -67,13 +77,16 @@ src/yapp.cc
 src/yarray.cc
 src/ybutton.cc
 src/ycollections.cc
+src/ycolor.cc
 src/yconfig.cc
 src/ycursor.cc
 src/ydialog.cc
+src/yfileio.cc
 src/yfont.cc
 src/yfontcore.cc
 src/yfontxft.cc
 src/yicon.cc
+src/yimage2.cc
 src/yimage_gdk.cc
 src/yinputline.cc
 src/ylabel.cc
@@ -83,7 +96,6 @@ src/ymenu.cc
 src/ymenuitem.cc
 src/ymsgbox.cc
 src/ypaint.cc
-src/ypaths.cc
 src/ypipereader.cc
 src/ypixmap.cc
 src/ypopup.cc
@@ -98,6 +110,5 @@ src/yurl.cc
 src/ywindow.cc
 src/yxapp.cc
 src/yxembed.cc
+src/yximage.cc
 src/yxtray.cc
-src/fdospecgen.h
-
